sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:5: error: not found: value estPlusPetit
        if (!estPlusPetit(j,j+1)) {
             ^