sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  for (i <- 1 to getNombreValeurs()-2) {
    for (j <- 1 to i) {
      	if (!estPlusPetit(j,j+1)) {
          echange(j,j+1)
          
        }
    }
  }
}